<?xml version="1.0"?>
<package format="2">
    <name>rosbag_error_checker</name>
    <version>0.0.0</version>
    <description>The fast map builder package</description>
    <maintainer email="eboy_wyy@163.com">moezen</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pita_base</build_depend>
    <build_depend>pita_consist</build_depend>
    <build_depend>pita_slam</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>pita_base</build_export_depend>
    <build_export_depend>pita_consist</build_export_depend>
    <build_export_depend>pita_slam</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pita_base</exec_depend>
    <exec_depend>pita_consist</exec_depend>
    <exec_depend>pita_slam</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
